deploy: fef919edd97f76a689380c9c398979a71b95b334

--- a/ar/index.html
+++ b/ar/index.html
@@ -633,7 +633,7 @@ window.addEventListener('click',(e)=>{
                         <h2>مجتمعات تدوم</h2>
                         <p>ستدعم مجموعاتك المفضلة بقسائم المجتمع المستقبلية.</p>
                         <p>ستدفع القسائم ثمن الخوادم، لتمكين مجتمعاتك من البقاء حرة ومستقلة.</p>
-                        <a class="gradient-text" href="/vouchers">Learn more and <strong>get a free access pass</strong> for early testing.</a>
+                        <a class="gradient-text" href="/vouchers">تعرف على المزيد و<strong>احصل على NFT مجاني</strong><br>للاختبار المبكر.</a>
                     </div>
                 </div>
             </section>
@@ -829,7 +829,7 @@ window.addEventListener('click',(e)=>{
                 </div>
             </article>
         </div>
-        <a href="#" class="text-grey-black dark:text-white text-[16px] text-center lg:ltr:text-left lg:rtl:text-right font-medium leading-[28px] tracking-[0.01em] block mt-[60px]">مشروع مفتوح المصدر © SimpleX 2020-2025</a>
+        <a href="#" class="text-grey-black dark:text-white text-[16px] text-center lg:ltr:text-left lg:rtl:text-right font-medium leading-[28px] tracking-[0.01em] block mt-[60px]">مشروع مفتوح المصدر © © 2020-2025 SimpleX Chat | مشروع مفتوح المصدرSimpleX 2020-2025</a>
     </div>
 </section>
 
