--- a/cs/index.html
+++ b/cs/index.html
@@ -547,12 +547,12 @@ window.addEventListener('click',(e)=>{
         <section class="page-1 cover page">
             <div class="area">
                 <div class="content">
-                    <h1>Be<br>Free</h1>
-                    <h2 class="gradient-text">Freedom & Security<br>of Your Communications</h2>
-                    <p>The first network where you own your identity, contacts, and groups.</p>
+                    <h1>Žít<br>svobodně</h1>
+                    <h2 class="gradient-text">Svoboda a Bezpečnost Vaší Komunikace</h2>
+                    <p>První síť, kde vaše identita, kontakty a skupiny patří vám.</p>
 
                     <div class="socials">
-                        <a href="/downloads" class="desktop-app-btn hidden" title="Download SimpleX Desktop App">
+                        <a href="/downloads" class="desktop-app-btn hidden" title="Stáhněte si desktopovou aplikaci SimpleX">
                             <div class="btn-content">
                                 <div>
                                     <img class="no-border" src="/img/design_3/socials/linux.png">
@@ -564,38 +564,38 @@ window.addEventListener('click',(e)=>{
                         </a>
                         <a class="apple-store-btn hidden" href="https://apps.apple.com/us/app/simplex-chat/id1605771084" target="_blank"><img src="/img/new/apple_store.svg"></a>
                         <a class="google-play-btn hidden" href="https://play.google.com/store/apps/details?id=chat.simplex.app" target="_blank"><img src="/img/new/google_play.svg"></a>
-                        <a class="f-droid-btn hidden" href="/cs/fdroid" title="SimpleX app via F-Droid"><img src="/img/new/f_droid.svg"></a>
-                        <a class="testflight-btn hidden" href="https://testflight.apple.com/join/DWuT2LQu" target="_blank"><img class="no-border" src="/img/design_3/testflight-dark.png" title="SimpleX iOS beta-release on TestFlight"></a>
+                        <a class="f-droid-btn hidden" href="/cs/fdroid" title="Stáhnout aplikaci SimpleX přes F-Droid"><img src="/img/new/f_droid.svg"></a>
+                        <a class="testflight-btn hidden" href="https://testflight.apple.com/join/DWuT2LQu" target="_blank"><img class="no-border" src="/img/design_3/testflight-dark.png" title="Beta verze SimpleX pro iOS na TestFlight"></a>
                         <a class="android-btn hidden" href="https://github.com/simplex-chat/simplex-chat/releases/latest/download/simplex-aarch64.apk" target="_blank"><img src="/img/design_3/android-dark.png"></a>
                     </div>
                     <div class="security-btns">
-                        <a title="Security Audits" href="https://www.trailofbits.com/about" target="_blank">
+                        <a title="Bezpečnostní audity" href="https://www.trailofbits.com/about" target="_blank">
                             <img src="/img/design_3/publications/trail-of-bits.png" alt="Trail of Bits">
                         </a>
-                        <a class="box-btn btn-1" title="Security Audit 2022" href="/blog/20221108-simplex-chat-v4.2-security-audit-new-website.html">
+                        <a class="box-btn btn-1" title="Bezpečnostní audit 2022" href="/blog/20221108-simplex-chat-v4.2-security-audit-new-website.html">
                             2022
                         </a>
-                        <a class="box-btn gold-gradient" title="Security Audit 2024" href="/blog/20241014-simplex-network-v6-1-security-review-better-calls-user-experience.html">
+                        <a class="box-btn gold-gradient" title="Bezpečnostní audit 2024" href="/blog/20241014-simplex-network-v6-1-security-review-better-calls-user-experience.html">
                             2024
                         </a>
                         <p class="security-audits">
-                            Security<br>Audits
+                            Bezpečnostní<br>audity
                         </p>
                     </div>
                     <div class="publications-btns">
-                        <a title="Privacy Guides messenger recommendations" href="https://www.privacyguides.org/en/real-time-communication/#simplex-chat" target="_blank">
+                        <a title="Doporučení messengerů od Privacy Guides" href="https://www.privacyguides.org/en/real-time-communication/#simplex-chat" target="_blank">
                             <img src="/img/design_3/publications/privacy-guides.png" alt="Privacy Guides">
                         </a>
-                        <a title="Whonix messenger recommendations" href="https://www.whonix.org/wiki/Chat#Recommendation" target="_blank">
+                        <a title="doporučení messengerů od Whonix" href="https://www.whonix.org/wiki/Chat#Recommendation" target="_blank">
                             <img src="/img/design_3/publications/whonix.png" alt="Whonix" class="whonix">
                         </a>
-                        <a title="Heise Online publications" href="https://www.heise.de/suche/?q=simplex+chat&sort_by=date&rm=search" target="_blank">
+                        <a title="Publikace Heise Online" href="https://www.heise.de/suche/?q=simplex+chat&sort_by=date&rm=search" target="_blank">
                             <img src="/img/design_3/publications/heise.png" alt="Heise">
                         </a>
-                        <a title="Review by Mike Kuketz" href="https://www.kuketz-blog.de/simplex-eindruecke-vom-messenger-ohne-identifier/" target="_blank">
+                        <a title="Rezence od Mike Kuketz" href="https://www.kuketz-blog.de/simplex-eindruecke-vom-messenger-ohne-identifier/" target="_blank">
                             <img src="/img/design_3/publications/kuketz-blog.png" alt="Kuketz Blog" class="kuketz">
                         </a>
-                        <a title="OptOut podcast interview" href="https://optoutpod.com/episodes/s3e02-simplexchat/" target="_blank">
+                        <a title="Rozhovor v podcastu OptOut" href="https://optoutpod.com/episodes/s3e02-simplexchat/" target="_blank">
                             <img src="/img/design_3/publications/optout.png" alt="Opt Out">
                         </a>
                     </div>
@@ -609,10 +609,10 @@ window.addEventListener('click',(e)=>{
             <section id="messaging" class="page-2 page">
                 <div class="area">
                     <div class="text-container">
-                        <h2>World&apos;s Most Secure Messaging</h2>
-                        <p>SimpleX messaging has cutting-edge end-to-end encryption.</p>
-                        <p>For your security and privacy, servers can&apos;t see your messages <span>and who you talk to</span>.</p>
-                        <a class="gradient-text" href="/cs/messaging">Learn more about SimpleX messaging</a>
+                        <h2>Nejbezpečnější komunikační platforma na světě</h2>
+                        <p>Zprávy v SimpleX jsou chráněny nejpokročilejším koncovým šifrováním (end-to-end).</p>
+                        <p>Pro vaše soukromí servery nevidí vaše zprávy <span>ani to, s kým si píšete</span>.</p>
+                        <a class="gradient-text" href="/cs/messaging">Zjistit více o zprávách v SimpleX</a>
                     </div>
                 </div>
             </section>
@@ -620,9 +620,9 @@ window.addEventListener('click',(e)=>{
             <section id="nextweb" class="page-3 page">
                 <div class="area">
                     <div class="text-container">
-                        <h2>You Own<br>The Next Web</h2>
-                        <p>SimpleX is founded on the belief that <span>you must own your identity, contacts and communities</span>.</p>
-                        <p>Open and decentralized network lets you connect with people and share ideas: be free and secure.</p>
+                        <h2>Váš internet<br>budoucnosti</h2>
+                        <p>SimpleX je postaven na myšlence, že <span>vaše data, kontakty a skupiny patří vám</span>.</p>
+                        <p>Otevřená decentralizovaná síť vám umožňuje spojovat se s ostatními a komunikovat svobodně a bezpečně.</p>
                     </div>
                 </div>
             </section>
@@ -630,10 +630,10 @@ window.addEventListener('click',(e)=>{
             <section id="token" class="page-4 page">
                 <div class="area">
                     <div class="text-container">
-                        <h2>Communities That Last</h2>
-                        <p>You will support your favorite groups with future Community Vouchers.</p>
-                        <p>Vouchers will pay for servers, to let your communities stay free and independent.</p>
-                        <a class="gradient-text" href="/vouchers">Learn more and <strong>get a free access pass</strong> for early testing.</a>
+                        <h2>Stabilní komunity</h2>
+                        <p>Své oblíbené skupiny budete moci podpořit pomocí připravovaných Skupinových Voucherů.</p>
+                        <p>Vouchery budou sloužit k úhradě provozu serverů, aby skupiny zůstaly svobodné a nezávislé.</p>
+                        <a class="gradient-text" href="/vouchers">Zjistěte více a <strong>získejte bezplatný přístup</strong> do testování.</a>
                     </div>
                 </div>
             </section>
@@ -641,21 +641,21 @@ window.addEventListener('click',(e)=>{
             <section id="roadmap" class="page-5 page">
                 <div class="area">
                     <div class="text-container">
-                        <h2>SimpleX Roadmap to Free Internet</h2>
+                        <h2>Plán SimpleX ke svobodnému internetu</h2>
                         <div class="roadmap">
                             <p>2025 </p>
-                            <p class="title"><span class="ltr:order-first rtl:order-last">: </span>Scale to Large Communities</p>
-                            <p>Escaping centralized platforms</p>
+                            <p class="title"><span class="ltr:order-first rtl:order-last">: </span>Škálování pro velké komunity</p>
+                            <p>Odchod od centralizovaných platforem</p>
                         </div>
                         <div class="roadmap">
                             <p>2026 </p>
-                            <p class="title"><span class="ltr:order-first rtl:order-last">: </span>Sustainable Communities &amp; Servers</p>
-                            <p>Launching Community Vouchers</p>
+                            <p class="title"><span class="ltr:order-first rtl:order-last">: </span>Udržitelné komunity a servery</p>
+                            <p>Spuštění Skupinových Voucherů</p>
                         </div>
                         <div class="roadmap">
                             <p>2027 </p>
-                            <p class="title"><span class="ltr:order-first rtl:order-last">: </span>Make Your Communities Grow</p>
-                            <p>Tools to promote your communities</p>
+                            <p class="title"><span class="ltr:order-first rtl:order-last">: </span>Pomozte své komunitě růst</p>
+                            <p>Nástroje na podporu vašich komunit</p>
                         </div>
                     </div>
                 </div>
@@ -676,7 +676,7 @@ window.addEventListener('click',(e)=>{
                     <a href="/directory" class="group-image" target="_blank"><img src="/img/group.svg"></a>
                     <a href="/directory" class="group-image" target="_blank"><img src="/img/group.svg"></a>
                     <a href="/directory" class="group-image" target="_blank"><img src="/img/group.svg"></a>
-                    <a href="https://smp4.simplex.im/g#hr4lvFeBmndWMKTwqiodPz3VBo_6UmdGWocXd1SupsM" class="simplex-image" title="SimpleX users group" target="_blank">
+                    <a href="https://smp4.simplex.im/g#hr4lvFeBmndWMKTwqiodPz3VBo_6UmdGWocXd1SupsM" class="simplex-image" title="Uživatelské skupiny SimpleX" target="_blank">
                         <img class="block dark:hidden" src="/img/new/logo-symbol-light.svg">
                         <img class="hidden dark:block" src="/img/new/logo-symbol-dark.svg">
                     </a>
@@ -696,10 +696,10 @@ window.addEventListener('click',(e)=>{
                     <a href="/directory" class="group-image" target="_blank"><img src="/img/group.svg"></a>
                 </div>
                 <div class="text-container">
-                    <h2>Join SimpleX Communities</h2>
-                    <p>Hundreds of thousands people already trust SimpleX messaging.</p>
-                    <p>Find your communities in SimpleX directory and create your own!</p>
-                    <a class="gradient-text" href="/directory">View SimpleX Directory</a>
+                    <h2>Zapojte se do komunit SimpleX</h2>
+                    <p>Statisíce lidí už důvěřují komunikaci přes SimpleX.</p>
+                    <p>Najděte své komunity v katalogu SimpleX a vytvořte si vlastní!</p>
+                    <a class="gradient-text" href="/directory">Zobrazit katalog SimpleX</a>
                 </div>
             </div>
         </section>
