--- a/fr/index.html
+++ b/fr/index.html
@@ -149,7 +149,7 @@
 
             <li class="nav-link ">
                 <a href="/directory/">
-                    <span class="nav-link-text">Directory</span>
+                    <span class="nav-link-text">Dossier</span>
                 </a>
             </li>
 
@@ -547,12 +547,12 @@ window.addEventListener('click',(e)=>{
         <section class="page-1 cover page">
             <div class="area">
                 <div class="content">
-                    <h1>Be<br>Free</h1>
-                    <h2 class="gradient-text">Freedom & Security<br>of Your Communications</h2>
-                    <p>The first network where you own your identity, contacts, and groups.</p>
+                    <h1>Soyez<br>Libre</h1>
+                    <h2 class="gradient-text">La liberté et la sécurité<br>de vos communications</h2>
+                    <p>Le premier réseau où vous possédez votre identité, vos contacts et vos groupes.</p>
 
                     <div class="socials">
-                        <a href="/downloads" class="desktop-app-btn hidden" title="Download SimpleX Desktop App">
+                        <a href="/downloads" class="desktop-app-btn hidden" title="Téléchargez l’application de bureau SimpleX">
                             <div class="btn-content">
                                 <div>
                                     <img class="no-border" src="/img/design_3/socials/linux.png">
@@ -564,35 +564,35 @@ window.addEventListener('click',(e)=>{
                         </a>
                         <a class="apple-store-btn hidden" href="https://apps.apple.com/us/app/simplex-chat/id1605771084" target="_blank"><img src="/img/new/apple_store.svg"></a>
                         <a class="google-play-btn hidden" href="https://play.google.com/store/apps/details?id=chat.simplex.app" target="_blank"><img src="/img/new/google_play.svg"></a>
-                        <a class="f-droid-btn hidden" href="/fr/fdroid" title="SimpleX app via F-Droid"><img src="/img/new/f_droid.svg"></a>
-                        <a class="testflight-btn hidden" href="https://testflight.apple.com/join/DWuT2LQu" target="_blank"><img class="no-border" src="/img/design_3/testflight-dark.png" title="SimpleX iOS beta-release on TestFlight"></a>
+                        <a class="f-droid-btn hidden" href="/fr/fdroid" title="Application SimpleX via F-Droid"><img src="/img/new/f_droid.svg"></a>
+                        <a class="testflight-btn hidden" href="https://testflight.apple.com/join/DWuT2LQu" target="_blank"><img class="no-border" src="/img/design_3/testflight-dark.png" title="Version bêta de SimpleX pour iOS sur TestFlight"></a>
                         <a class="android-btn hidden" href="https://github.com/simplex-chat/simplex-chat/releases/latest/download/simplex-aarch64.apk" target="_blank"><img src="/img/design_3/android-dark.png"></a>
                     </div>
                     <div class="security-btns">
-                        <a title="Security Audits" href="https://www.trailofbits.com/about" target="_blank">
+                        <a title="Audits de sécurité" href="https://www.trailofbits.com/about" target="_blank">
                             <img src="/img/design_3/publications/trail-of-bits.png" alt="Trail of Bits">
                         </a>
-                        <a class="box-btn btn-1" title="Security Audit 2022" href="/blog/20221108-simplex-chat-v4.2-security-audit-new-website.html">
+                        <a class="box-btn btn-1" title="Audit de sécurité 2022" href="/blog/20221108-simplex-chat-v4.2-security-audit-new-website.html">
                             2022
                         </a>
-                        <a class="box-btn gold-gradient" title="Security Audit 2024" href="/blog/20241014-simplex-network-v6-1-security-review-better-calls-user-experience.html">
+                        <a class="box-btn gold-gradient" title="Audit de sécurité 2024" href="/blog/20241014-simplex-network-v6-1-security-review-better-calls-user-experience.html">
                             2024
                         </a>
                         <p class="security-audits">
-                            Security<br>Audits
+                            Audit de<br>sécurité
                         </p>
                     </div>
                     <div class="publications-btns">
-                        <a title="Privacy Guides messenger recommendations" href="https://www.privacyguides.org/en/real-time-communication/#simplex-chat" target="_blank">
+                        <a title="Messagerie recommandée par Privacy Guides" href="https://www.privacyguides.org/en/real-time-communication/#simplex-chat" target="_blank">
                             <img src="/img/design_3/publications/privacy-guides.png" alt="Privacy Guides">
                         </a>
-                        <a title="Whonix messenger recommendations" href="https://www.whonix.org/wiki/Chat#Recommendation" target="_blank">
+                        <a title="Messagerie recommandée par Whonix" href="https://www.whonix.org/wiki/Chat#Recommendation" target="_blank">
                             <img src="/img/design_3/publications/whonix.png" alt="Whonix" class="whonix">
                         </a>
                         <a title="Heise Online publications" href="https://www.heise.de/suche/?q=simplex+chat&sort_by=date&rm=search" target="_blank">
                             <img src="/img/design_3/publications/heise.png" alt="Heise">
                         </a>
-                        <a title="Review by Mike Kuketz" href="https://www.kuketz-blog.de/simplex-eindruecke-vom-messenger-ohne-identifier/" target="_blank">
+                        <a title="Analyse de Mike Kuketz" href="https://www.kuketz-blog.de/simplex-eindruecke-vom-messenger-ohne-identifier/" target="_blank">
                             <img src="/img/design_3/publications/kuketz-blog.png" alt="Kuketz Blog" class="kuketz">
                         </a>
                         <a title="OptOut podcast interview" href="https://optoutpod.com/episodes/s3e02-simplexchat/" target="_blank">
@@ -610,9 +610,9 @@ window.addEventListener('click',(e)=>{
                 <div class="area">
                     <div class="text-container">
                         <h2>World&apos;s Most Secure Messaging</h2>
-                        <p>SimpleX messaging has cutting-edge end-to-end encryption.</p>
+                        <p>La messagerie SimpleX utilise un chiffrement de bout en bout à la pointe de la technologie.</p>
                         <p>For your security and privacy, servers can&apos;t see your messages <span>and who you talk to</span>.</p>
-                        <a class="gradient-text" href="/fr/messaging">Learn more about SimpleX messaging</a>
+                        <a class="gradient-text" href="/fr/messaging">En savoir plus sur la messagerie SimpleX</a>
                     </div>
                 </div>
             </section>
@@ -620,9 +620,9 @@ window.addEventListener('click',(e)=>{
             <section id="nextweb" class="page-3 page">
                 <div class="area">
                     <div class="text-container">
-                        <h2>You Own<br>The Next Web</h2>
+                        <h2>Prenez le contrôle<br>du Web de demain</h2>
                         <p>SimpleX is founded on the belief that <span>you must own your identity, contacts and communities</span>.</p>
-                        <p>Open and decentralized network lets you connect with people and share ideas: be free and secure.</p>
+                        <p>Un réseau ouvert et décentralisé vous permet de communiquer avec les autres et de partager vos idées : soyez libre et en sécurité.</p>
                     </div>
                 </div>
             </section>
@@ -630,10 +630,10 @@ window.addEventListener('click',(e)=>{
             <section id="token" class="page-4 page">
                 <div class="area">
                     <div class="text-container">
-                        <h2>Communities That Last</h2>
+                        <h2>Des communautés qui durent</h2>
                         <p>You will support your favorite groups with future Community Vouchers.</p>
                         <p>Vouchers will pay for servers, to let your communities stay free and independent.</p>
-                        <a class="gradient-text" href="/vouchers">Learn more and <strong>get a free access pass</strong> for early testing.</a>
+                        <a class="gradient-text" href="/vouchers">En savoir plus et <strong>obtenez votre NFT gratuit</strong><br>pour les premiers tests.</a>
                     </div>
                 </div>
             </section>
@@ -641,7 +641,7 @@ window.addEventListener('click',(e)=>{
             <section id="roadmap" class="page-5 page">
                 <div class="area">
                     <div class="text-container">
-                        <h2>SimpleX Roadmap to Free Internet</h2>
+                        <h2>Feuille de route de SimpleX vers un Internet libre</h2>
                         <div class="roadmap">
                             <p>2025 </p>
                             <p class="title"><span class="ltr:order-first rtl:order-last">: </span>Scale to Large Communities</p>
@@ -715,7 +715,7 @@ window.addEventListener('click',(e)=>{
                     <div class="flex flex-col items-center lg:items-start">
                         <a href="/about/"
                             class="text-grey-black dark:text-white text-[14px] font-medium leading-[28px] tracking-[0.01em] mb-3 flex items-center gap-1">
-                            About & Contact us
+                            À propos & Contactez-nous
                         </a>
                         <a href="/privacy/"
                             class="text-grey-black dark:text-white text-[14px] font-medium leading-[28px] tracking-[0.01em] mb-3 flex items-center gap-1">
