--- a/fr/messaging/index.html
+++ b/fr/messaging/index.html
@@ -129,7 +129,7 @@
 
             <li class="nav-link ">
                 <a href="/directory/">
-                    <span class="nav-link-text">Directory</span>
+                    <span class="nav-link-text">Dossier</span>
                 </a>
             </li>
 
@@ -1452,7 +1452,7 @@ window.addEventListener('click',(e)=>{
                             Vous pouvez créer des contacts et des groupes, et avoir des conversations bidirectionnelles, comme dans n'importe quelle autre messagerie.
                         </p>
                         <p class="text-black dark:text-white text-[16px] font-normal text-center">
-                            Comment cela peut-il fonctionner avec des files d'attente unidirectionnelles et sans identifiants de profil utilisateur&nbsp;?
+                            Comment cela peut-il fonctionner avec des files d'attente unidirectionnelles et sans identifiants de profil utilisateur ?
                         </p>
                     </div>
                 </div>
@@ -1778,7 +1778,7 @@ window.addEventListener("load", function () {
                     <div class="flex flex-col items-center lg:items-start">
                         <a href="/about/"
                             class="text-grey-black dark:text-white text-[14px] font-medium leading-[28px] tracking-[0.01em] mb-3 flex items-center gap-1">
-                            About & Contact us
+                            À propos & Contactez-nous
                         </a>
                         <a href="/privacy/"
                             class="text-grey-black dark:text-white text-[14px] font-medium leading-[28px] tracking-[0.01em] mb-3 flex items-center gap-1">
