--- a/hu/index.html
+++ b/hu/index.html
@@ -548,8 +548,8 @@ window.addEventListener('click',(e)=>{
             <div class="area">
                 <div class="content">
                     <h1>Legyen<br>szabad</h1>
-                    <h2 class="gradient-text">Az Ön kommunikációjának<br>szabadsága és biztonsága</h2>
-                    <p>Az első olyan hálózat, ahol Ön a tulajdonosa saját identitásának, partnereinek és csoportjainak.</p>
+                    <h2 class="gradient-text">A kommunikációjának<br>szabadsága és biztonsága</h2>
+                    <p>Az első olyan hálózat, ahol a felhasználó a tulajdonosa saját identitásának, partnereinek és csoportjainak.</p>
 
                     <div class="socials">
                         <a href="/downloads" class="desktop-app-btn hidden" title="SimpleX számítógépes alkalmazásának letöltése">
@@ -611,7 +611,7 @@ window.addEventListener('click',(e)=>{
                     <div class="text-container">
                         <h2>A világ legbiztonságosabb üzenetváltó alkalmazása</h2>
                         <p>Az üzenetváltás a SimpleXben élvonalbeli végpontok közötti titkosítással rendelkezik.</p>
-                        <p>Az Ön biztonsága és magánszférájának védelme érdekében a kiszolgálók nem látják az üzeneteit, <span>és azt sem, hogy kivel beszélget</span>.</p>
+                        <p>A biztonsága és magánszférájának védelme érdekében a kiszolgálók nem látják az üzeneteit, <span>és azt sem, hogy kivel beszélget</span>.</p>
                         <a class="gradient-text" href="/hu/messaging">Tudjon meg többet a SimpleX üzenetváltó alkalmazásról</a>
                     </div>
                 </div>
@@ -620,8 +620,8 @@ window.addEventListener('click',(e)=>{
             <section id="nextweb" class="page-3 page">
                 <div class="area">
                     <div class="text-container">
-                        <h2>Legyen az Öné<br>A jövő hálózata</h2>
-                        <p>A SimpleX arra a meggyőződésre épül, hogy <span>Önnek kell birtokolnia a saját identitását és a kapcsolatot partnereivel és a közösségeivel</span>.</p>
+                        <h2>Vegye birtokba<br>A jövő hálózatát</h2>
+                        <p>A SimpleX arra a meggyőződésre épül, hogy <span>a felhasználóknak kell birtokolnia a saját identitásukat, valamint a kapcsolataikat a partnereikkel és a közösségeikkel</span>.</p>
                         <p>A nyílt és decentralizált hálózat lehetővé teszi, hogy kapcsolatba lépjen másokkal és ötleteket osszon meg: legyen szabad biztonságban.</p>
                     </div>
                 </div>
