--- a/id/messaging/index.html
+++ b/id/messaging/index.html
@@ -1465,7 +1465,7 @@ window.addEventListener('click',(e)=>{
                             Untuk setiap koneksi, Anda menggunakan dua antrean pesan terpisah untuk mengirim dan menerima pesan melalui server yang berbeda.
                         </p>
                         <p class="text-black dark:text-white text-[16px] font-normal text-center">
-                            Server hanya menyampaikan pesan satu arah, tanpa memiliki gambaran lengkap mengenai percakapan atau koneksi pengguna.
+                            Server hanya menyampaikan pesan satu arah, tanpa memiliki gambaran lengkap tentang percakapan atau koneksi pengguna.
                         </p>
                     </div>
                 </div>
