--- a/id/old/index.html
+++ b/id/old/index.html
@@ -664,7 +664,7 @@ window.addEventListener('click',(e)=>{
     Hanya perangkat klien yang menyimpan profil pengguna, kontak, dan grup; pesan dikirim dengan enkripsi end-to-end 2 lapis.
 </p>
 <p>
-    Selengkapnya di <a href="https://github.com/simplex-chat/simplexmq/blob/stable/protocol/overview-tjr.md" target="_blank">Whitepaper SimpleX</a>.
+    Selengkapnya di <a href="https://github.com/simplex-chat/simplexmq/blob/stable/protocol/overview-tjr.md" target="_blank">whitepaper SimpleX</a>.
 </p>
                         </div>
                     </div>
@@ -1846,7 +1846,7 @@ window.addEventListener('click',(e)=>{
                             Untuk setiap koneksi, Anda menggunakan dua antrean pesan terpisah untuk mengirim dan menerima pesan melalui server yang berbeda.
                         </p>
                         <p class="text-black dark:text-white text-[16px] font-normal text-center">
-                            Server hanya menyampaikan pesan satu arah, tanpa memiliki gambaran lengkap mengenai percakapan atau koneksi pengguna.
+                            Server hanya menyampaikan pesan satu arah, tanpa memiliki gambaran lengkap tentang percakapan atau koneksi pengguna.
                         </p>
                     </div>
                 </div>
