--- a/it/index.html
+++ b/it/index.html
@@ -609,7 +609,7 @@ window.addEventListener('click',(e)=>{
             <section id="messaging" class="page-2 page">
                 <div class="area">
                     <div class="text-container">
-                        <h2>La messaggistica più sicuro del mondo</h2>
+                        <h2>La messaggistica più sicura del mondo</h2>
                         <p>SimpleX usa una crittografia end-to-end all&#39;avanguardia.</p>
                         <p>Per la tua sicurezza e privacy, i server non possono vedere i messaggi <span>e con chi parli</span>.</p>
                         <a class="gradient-text" href="/it/messaging">Scopri di più sui messaggi di SimpleX</a>
