--- a/ja/index.html
+++ b/ja/index.html
@@ -149,7 +149,7 @@
 
             <li class="nav-link ">
                 <a href="/directory/">
-                    <span class="nav-link-text">Directory</span>
+                    <span class="nav-link-text">ディレクトリ</span>
                 </a>
             </li>
 
@@ -192,7 +192,7 @@
 
             <li class="nav-link">
                 <a href="javascript:void(0);">
-                    <span class="">参考文献</span>
+                    <span class="">リファレンス</span>
                     <span href="" id="btn-mobile">
                         <svg viewBox="0 0 10 6" xmlns="http://www.w3.org/2000/svg">
                             <path fill-rule="evenodd" clip-rule="evenodd" d="M1.50447 0.902966C1.21571 0.627397 0.747525 0.627397 0.458761 0.902966C0.169996 1.17853 0.169996 1.62532 0.458761 1.90089L4.21933 5.48961C4.25543 5.52406 4.29433 5.5542 4.33533 5.58003C4.62234 5.76088 5.01237 5.73074 5.26504 5.48961L9.02561 1.90089C9.31438 1.62532 9.31438 1.17853 9.02561 0.902966C8.73685 0.627397 8.26867 0.627397 7.97991 0.902966L4.74219 3.99273L1.50447 0.902966Z"/>
@@ -547,12 +547,12 @@ window.addEventListener('click',(e)=>{
         <section class="page-1 cover page">
             <div class="area">
                 <div class="content">
-                    <h1>Be<br>Free</h1>
-                    <h2 class="gradient-text">Freedom & Security<br>of Your Communications</h2>
-                    <p>The first network where you own your identity, contacts, and groups.</p>
+                    <h1>自由で<br>あれ</h1>
+                    <h2 class="gradient-text">あなたのコミュニケーションに<br>自由とセキュリティを</h2>
+                    <p>アイデンティティ、連絡先、グループをあなた自身が所有できる、最初のネットワーク。</p>
 
                     <div class="socials">
-                        <a href="/downloads" class="desktop-app-btn hidden" title="Download SimpleX Desktop App">
+                        <a href="/downloads" class="desktop-app-btn hidden" title="SimpleX デスクトップアプリをダウンロード">
                             <div class="btn-content">
                                 <div>
                                     <img class="no-border" src="/img/design_3/socials/linux.png">
@@ -569,33 +569,33 @@ window.addEventListener('click',(e)=>{
                         <a class="android-btn hidden" href="https://github.com/simplex-chat/simplex-chat/releases/latest/download/simplex-aarch64.apk" target="_blank"><img src="/img/design_3/android-dark.png"></a>
                     </div>
                     <div class="security-btns">
-                        <a title="Security Audits" href="https://www.trailofbits.com/about" target="_blank">
+                        <a title="セキュリティ監査" href="https://www.trailofbits.com/about" target="_blank">
                             <img src="/img/design_3/publications/trail-of-bits.png" alt="Trail of Bits">
                         </a>
-                        <a class="box-btn btn-1" title="Security Audit 2022" href="/blog/20221108-simplex-chat-v4.2-security-audit-new-website.html">
+                        <a class="box-btn btn-1" title="セキュリティ監査 2022" href="/blog/20221108-simplex-chat-v4.2-security-audit-new-website.html">
                             2022
                         </a>
-                        <a class="box-btn gold-gradient" title="Security Audit 2024" href="/blog/20241014-simplex-network-v6-1-security-review-better-calls-user-experience.html">
+                        <a class="box-btn gold-gradient" title="セキュリティ監査 2024" href="/blog/20241014-simplex-network-v6-1-security-review-better-calls-user-experience.html">
                             2024
                         </a>
                         <p class="security-audits">
-                            Security<br>Audits
+                            セキュリティ<br>監査
                         </p>
                     </div>
                     <div class="publications-btns">
-                        <a title="Privacy Guides messenger recommendations" href="https://www.privacyguides.org/en/real-time-communication/#simplex-chat" target="_blank">
+                        <a title="Privacy Guide 推奨" href="https://www.privacyguides.org/en/real-time-communication/#simplex-chat" target="_blank">
                             <img src="/img/design_3/publications/privacy-guides.png" alt="Privacy Guides">
                         </a>
-                        <a title="Whonix messenger recommendations" href="https://www.whonix.org/wiki/Chat#Recommendation" target="_blank">
+                        <a title="Whonix推奨" href="https://www.whonix.org/wiki/Chat#Recommendation" target="_blank">
                             <img src="/img/design_3/publications/whonix.png" alt="Whonix" class="whonix">
                         </a>
-                        <a title="Heise Online publications" href="https://www.heise.de/suche/?q=simplex+chat&sort_by=date&rm=search" target="_blank">
+                        <a title="Heise Online の記事" href="https://www.heise.de/suche/?q=simplex+chat&sort_by=date&rm=search" target="_blank">
                             <img src="/img/design_3/publications/heise.png" alt="Heise">
                         </a>
-                        <a title="Review by Mike Kuketz" href="https://www.kuketz-blog.de/simplex-eindruecke-vom-messenger-ohne-identifier/" target="_blank">
+                        <a title="Mike Kuketzによるレビュー" href="https://www.kuketz-blog.de/simplex-eindruecke-vom-messenger-ohne-identifier/" target="_blank">
                             <img src="/img/design_3/publications/kuketz-blog.png" alt="Kuketz Blog" class="kuketz">
                         </a>
-                        <a title="OptOut podcast interview" href="https://optoutpod.com/episodes/s3e02-simplexchat/" target="_blank">
+                        <a title="OptOut ポッドキャストインタビュー" href="https://optoutpod.com/episodes/s3e02-simplexchat/" target="_blank">
                             <img src="/img/design_3/publications/optout.png" alt="Opt Out">
                         </a>
                     </div>
@@ -609,10 +609,10 @@ window.addEventListener('click',(e)=>{
             <section id="messaging" class="page-2 page">
                 <div class="area">
                     <div class="text-container">
-                        <h2>World&apos;s Most Secure Messaging</h2>
-                        <p>SimpleX messaging has cutting-edge end-to-end encryption.</p>
-                        <p>For your security and privacy, servers can&apos;t see your messages <span>and who you talk to</span>.</p>
-                        <a class="gradient-text" href="/ja/messaging">Learn more about SimpleX messaging</a>
+                        <h2>世界で最も安全なメッセージングサービス</h2>
+                        <p>SimpleXの通信は、最先端のエンドツーエンド暗号化によって保護されています。</p>
+                        <p>安全とプライバシーのため、サーバーはメッセージの内容や、<span>誰とやり取りしているか</span>を知ることができません。</p>
+                        <a class="gradient-text" href="/ja/messaging">SimpleXのメッセージ機能について詳しく知る</a>
                     </div>
                 </div>
             </section>
@@ -620,9 +620,9 @@ window.addEventListener('click',(e)=>{
             <section id="nextweb" class="page-3 page">
                 <div class="area">
                     <div class="text-container">
-                        <h2>You Own<br>The Next Web</h2>
-                        <p>SimpleX is founded on the belief that <span>you must own your identity, contacts and communities</span>.</p>
-                        <p>Open and decentralized network lets you connect with people and share ideas: be free and secure.</p>
+                        <h2>次のWebは<br>あなたのもの</h2>
+                        <p>SimpleXは、 <span>アイデンティティ・連絡先・コミュニティはあなたのものであるべきだ</span>という考えに基づいています。</p>
+                        <p>オープンで分散型のネットワークで、自由で安全に人とつながり、アイデアを共有できます。</p>
                     </div>
                 </div>
             </section>
@@ -630,9 +630,9 @@ window.addEventListener('click',(e)=>{
             <section id="token" class="page-4 page">
                 <div class="area">
                     <div class="text-container">
-                        <h2>Communities That Last</h2>
-                        <p>You will support your favorite groups with future Community Vouchers.</p>
-                        <p>Vouchers will pay for servers, to let your communities stay free and independent.</p>
+                        <h2>続いていくコミュニティ</h2>
+                        <p>コミュニティバウチャーを通じて、お気に入りのグループをサポートできます。</p>
+                        <p>バウチャーはサーバー費用に充てられ、コミュニティが自由で独立した状態を保ち続けられるようにします。</p>
                         <a class="gradient-text" href="/vouchers">Learn more and <strong>get a free access pass</strong> for early testing.</a>
                     </div>
                 </div>
@@ -641,21 +641,21 @@ window.addEventListener('click',(e)=>{
             <section id="roadmap" class="page-5 page">
                 <div class="area">
                     <div class="text-container">
-                        <h2>SimpleX Roadmap to Free Internet</h2>
+                        <h2>自由なインターネットを目指す SimpleX ロードマップ</h2>
                         <div class="roadmap">
                             <p>2025 </p>
-                            <p class="title"><span class="ltr:order-first rtl:order-last">: </span>Scale to Large Communities</p>
-                            <p>Escaping centralized platforms</p>
+                            <p class="title"><span class="ltr:order-first rtl:order-last">: </span>大規模コミュニティへの拡張</p>
+                            <p>中央集権型プラットフォームからの脱却</p>
                         </div>
                         <div class="roadmap">
                             <p>2026 </p>
-                            <p class="title"><span class="ltr:order-first rtl:order-last">: </span>Sustainable Communities &amp; Servers</p>
-                            <p>Launching Community Vouchers</p>
+                            <p class="title"><span class="ltr:order-first rtl:order-last">: </span>サステナブルなコミュニティ&amp;サーバ</p>
+                            <p>コミュニティバウチャーの開始</p>
                         </div>
                         <div class="roadmap">
                             <p>2027 </p>
-                            <p class="title"><span class="ltr:order-first rtl:order-last">: </span>Make Your Communities Grow</p>
-                            <p>Tools to promote your communities</p>
+                            <p class="title"><span class="ltr:order-first rtl:order-last">: </span>コミュニティの成長</p>
+                            <p>コミュニティを広げるツール</p>
                         </div>
                     </div>
                 </div>
@@ -676,7 +676,7 @@ window.addEventListener('click',(e)=>{
                     <a href="/directory" class="group-image" target="_blank"><img src="/img/group.svg"></a>
                     <a href="/directory" class="group-image" target="_blank"><img src="/img/group.svg"></a>
                     <a href="/directory" class="group-image" target="_blank"><img src="/img/group.svg"></a>
-                    <a href="https://smp4.simplex.im/g#hr4lvFeBmndWMKTwqiodPz3VBo_6UmdGWocXd1SupsM" class="simplex-image" title="SimpleX users group" target="_blank">
+                    <a href="https://smp4.simplex.im/g#hr4lvFeBmndWMKTwqiodPz3VBo_6UmdGWocXd1SupsM" class="simplex-image" title="SimpleXユーザグループ" target="_blank">
                         <img class="block dark:hidden" src="/img/new/logo-symbol-light.svg">
                         <img class="hidden dark:block" src="/img/new/logo-symbol-dark.svg">
                     </a>
@@ -696,10 +696,10 @@ window.addEventListener('click',(e)=>{
                     <a href="/directory" class="group-image" target="_blank"><img src="/img/group.svg"></a>
                 </div>
                 <div class="text-container">
-                    <h2>Join SimpleX Communities</h2>
-                    <p>Hundreds of thousands people already trust SimpleX messaging.</p>
-                    <p>Find your communities in SimpleX directory and create your own!</p>
-                    <a class="gradient-text" href="/directory">View SimpleX Directory</a>
+                    <h2>SimpleXコミュニティに参加する</h2>
+                    <p>既に何十万人もの人々がSimpleXメッセージングを信頼しています。</p>
+                    <p>SimpleXディレクトリでコミュニティを見つけたり、あなた自身のコミュニティを作成しましょう！</p>
+                    <a class="gradient-text" href="/directory">SimpleXディレクトリを見る</a>
                 </div>
             </div>
         </section>
@@ -715,7 +715,7 @@ window.addEventListener('click',(e)=>{
                     <div class="flex flex-col items-center lg:items-start">
                         <a href="/about/"
                             class="text-grey-black dark:text-white text-[14px] font-medium leading-[28px] tracking-[0.01em] mb-3 flex items-center gap-1">
-                            About & Contact us
+                            概要・お問い合わせ
                         </a>
                         <a href="/privacy/"
                             class="text-grey-black dark:text-white text-[14px] font-medium leading-[28px] tracking-[0.01em] mb-3 flex items-center gap-1">
