--- a/tr/messaging/index.html
+++ b/tr/messaging/index.html
@@ -125,7 +125,7 @@
 
             <li class="nav-link ">
                 <a href="/directory/">
-                    <span class="nav-link-text">Directory</span>
+                    <span class="nav-link-text">Dizin</span>
                 </a>
             </li>
 
@@ -1456,7 +1456,7 @@ window.addEventListener('click',(e)=>{
                             Her bağlantı için, farklı sunucular üzerinden mesaj göndermek ve almak üzere iki ayrı mesaj kuyruğu kullanırsınız.
                         </p>
                         <p class="text-black dark:text-white text-[16px] font-normal text-center">
-                            Sunucular, kullanıcı konuşmalarının veya bağlantılarının tüm geçmişini bilmeden mesajları yalnızca tek bir yönde iletir.
+                            Sunucular, kullanıcıların konuşmalarının veya bağlantılarının tam resmini görmeden mesajları tek yönlü olarak iletir.
                         </p>
                     </div>
                 </div>
@@ -1769,7 +1769,7 @@ window.addEventListener("load", function () {
                     <div class="flex flex-col items-center lg:items-start">
                         <a href="/about/"
                             class="text-grey-black dark:text-white text-[14px] font-medium leading-[28px] tracking-[0.01em] mb-3 flex items-center gap-1">
-                            About & Contact us
+                            Hakkımızda & İletişim
                         </a>
                         <a href="/privacy/"
                             class="text-grey-black dark:text-white text-[14px] font-medium leading-[28px] tracking-[0.01em] mb-3 flex items-center gap-1">
