--- a/hu/invitation/index.html
+++ b/hu/invitation/index.html
@@ -759,7 +759,7 @@ window.addEventListener('click',(e)=>{
 <section id="join-simplex" class="bg-primary-bg-light dark:bg-primary-bg-dark lg:h-[855px] py-[90px] px-5">
     <div class="container flex flex-col items-center">
         <h2 class="text-[38px] leading-[36px] md:leading-[55px] text-grey-black dark:text-white text-center font-bold mb-5"><span class="text-active-blue">Csatlakozzon a közösségeinkhez</span> SimpleX</h2>
-        <p class="text-black dark:text-white text-base text-center mb-14">Meghívjuk Önt, hogy csatlakozzon a beszélgetésekhez</p>
+        <p class="text-black dark:text-white text-base text-center mb-14">Csatlakozzon a beszélgetéseinkhez</p>
 
         <div class="flex flex-col items-center gap-5 self-stretch mb-12">
             <a href="https://www.reddit.com/r/SimpleXChat/" class="flex items-center justify-center h-11 w-full max-w-[294px] font-medium text-base rounded-[34px] tracking-[0.02em] text-primary-light dark:text-primary-dark dark:bg-primary-bg-dark dark:border-primary-dark dark:border bg-[#D9ECFF]">Csatlakozzon a REDDIT közösséghez</a>
