--- a/ja/messaging/index.html
+++ b/ja/messaging/index.html
@@ -129,7 +129,7 @@
 
             <li class="nav-link ">
                 <a href="/directory/">
-                    <span class="nav-link-text">Directory</span>
+                    <span class="nav-link-text">ディレクトリ</span>
                 </a>
             </li>
 
@@ -172,7 +172,7 @@
 
             <li class="nav-link">
                 <a href="javascript:void(0);">
-                    <span class="">参考文献</span>
+                    <span class="">リファレンス</span>
                     <span href="" id="btn-mobile">
                         <svg viewBox="0 0 10 6" xmlns="http://www.w3.org/2000/svg">
                             <path fill-rule="evenodd" clip-rule="evenodd" d="M1.50447 0.902966C1.21571 0.627397 0.747525 0.627397 0.458761 0.902966C0.169996 1.17853 0.169996 1.62532 0.458761 1.90089L4.21933 5.48961C4.25543 5.52406 4.29433 5.5542 4.33533 5.58003C4.62234 5.76088 5.01237 5.73074 5.26504 5.48961L9.02561 1.90089C9.31438 1.62532 9.31438 1.17853 9.02561 0.902966C8.73685 0.627397 8.26867 0.627397 7.97991 0.902966L4.74219 3.99273L1.50447 0.902966Z"/>
@@ -1778,7 +1778,7 @@ window.addEventListener("load", function () {
                     <div class="flex flex-col items-center lg:items-start">
                         <a href="/about/"
                             class="text-grey-black dark:text-white text-[14px] font-medium leading-[28px] tracking-[0.01em] mb-3 flex items-center gap-1">
-                            About & Contact us
+                            概要・お問い合わせ
                         </a>
                         <a href="/privacy/"
                             class="text-grey-black dark:text-white text-[14px] font-medium leading-[28px] tracking-[0.01em] mb-3 flex items-center gap-1">
