--- a/uk/old/index.html
+++ b/uk/old/index.html
@@ -129,7 +129,7 @@
 
             <li class="nav-link ">
                 <a href="/directory/">
-                    <span class="nav-link-text">Directory</span>
+                    <span class="nav-link-text">Каталог</span>
                 </a>
             </li>
 
@@ -2086,7 +2086,7 @@ window.addEventListener("load", function () {
                     <div class="flex flex-col items-center lg:items-start">
                         <a href="/about/"
                             class="text-grey-black dark:text-white text-[14px] font-medium leading-[28px] tracking-[0.01em] mb-3 flex items-center gap-1">
-                            About & Contact us
+                            Про нас & Контакти
                         </a>
                         <a href="/privacy/"
                             class="text-grey-black dark:text-white text-[14px] font-medium leading-[28px] tracking-[0.01em] mb-3 flex items-center gap-1">
